--- a/Application/Share&Ride/app/src/main/AndroidManifest.xml
+++ b/Application/Share&Ride/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <activity
             android:name=".MembersActivity"
             android:label="@string/title_activity_members"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
