--- a/Application/Share&Ride/app/src/main/AndroidManifest.xml
+++ b/Application/Share&Ride/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
             android:name=".MembersActivity"
             android:label="@string/title_activity_members"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".PostActivity" />
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".FAQActivity" />
+        <activity android:name=".ComplainActivity" />
+        <activity android:name=".FindRideActivity" />
+        <activity android:name=".FeedbackActivity" />
+        <activity android:name=".ToolActivity"></activity>
     </application>
 
 </manifest>
