--- a/Application/Share&Ride/build.gradle
+++ b/Application/Share&Ride/build.gradle
@@ -18,6 +18,9 @@ allprojects {
     repositories {
         jcenter()
         google()
+        mavenCentral()
+        maven{ url 'https://maven.google.com'}
+
     }
 }
 
