--- a/Application/Share&Ride/app/src/main/AndroidManifest.xml
+++ b/Application/Share&Ride/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="shafin.shareride">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
@@ -28,7 +30,8 @@
         <activity android:name=".ComplainActivity" />
         <activity android:name=".FindRideActivity" />
         <activity android:name=".FeedbackActivity" />
-        <activity android:name=".ToolActivity"></activity>
+        <activity android:name=".ToolActivity" />
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
